--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -585,6 +585,10 @@ depends_on = ["trait-sip-010", "token-apower"]
 path = "contracts/pool/alex-launchpad-v1-5.clar"
 depends_on = ["trait-sip-010", "token-apower"]
 
+[contracts.alex-launchpad-v1-6]
+path = "contracts/pool/alex-launchpad-v1-6.clar"
+depends_on = ["trait-sip-010", "token-apower"]
+
 [contracts.token-banana]
 path = "contracts/token/token-banana.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
@@ -1184,6 +1188,9 @@ path = "contracts/pool/launchpad-with-pool-lock-v1-4.clar"
 [contracts.launchpad-with-pool-lock-v1-5]
 path = "contracts/pool/launchpad-with-pool-lock-v1-5.clar"
 
+[contracts.launchpad-with-pool-lock-v1-6]
+path = "contracts/pool/launchpad-with-pool-lock-v1-6.clar"
+
 [contracts.bridge-apower-helper]
 path = "contracts/helpers/bridge-apower-helper.clar"
 clarity_version = 2
@@ -1213,6 +1220,12 @@ epoch = 2.4
 [contracts.sponsored-alex-launchpad-v1-5]
 path = 'contracts/sponsored/sponsored-alex-launchpad-v1-5.clar'
 depends_on = ["alex-launchpad-v1-5"]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.sponsored-alex-launchpad-v1-6]
+path = 'contracts/sponsored/sponsored-alex-launchpad-v1-6.clar'
+depends_on = ["alex-launchpad-v1-6"]
 clarity_version = 2
 epoch = 2.4
 
