--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1295,3 +1295,13 @@ path = "contracts/pool/launchpad-with-pool-lock-v1-7.clar"
 [contracts.brc20-reos]
 path = "contracts/token/brc20-reos.clar"
 depends_on = []
+
+[contracts.token-gus]
+path = "contracts/token/token-gus.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.token-wgus]
+path = "contracts/wrapped-token/token-wgus.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-gus"]
+clarity_version = 2
+epoch = 2.4
