--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -24,6 +24,8 @@ contract_id = "SP27BB1Y2DGSXZHS7G9YHKTSH6KQ6BD3QG0AN3CR9.vibes-token"
 contract_id = "SP3D6PV2ACBPEKYJTCMH7HEN02KP87QSP8KTEH335.mega"
 [[project.requirements]]
 contract_id = "SP1AY6K3PQV5MRT6R4S671NWW2FRVPKM0BR162CT6.leo-token"
+[[project.requirements]]
+contract_id = "SP1JFFSYTSH7VBM54K29ZFS9H4SVB67EA8VT2MYJ9.gus-token"
 
 [repl]
 costs_version = 2
@@ -1295,3 +1297,13 @@ path = "contracts/pool/launchpad-with-pool-lock-v1-7.clar"
 [contracts.brc20-reos]
 path = "contracts/token/brc20-reos.clar"
 depends_on = []
+
+[contracts.token-gus]
+path = "contracts/token/token-gus.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.token-wgus]
+path = "contracts/wrapped-token/token-wgus.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-gus"]
+clarity_version = 2
+epoch = 2.4
