--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1271,24 +1271,6 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-leo"]
 clarity_version = 2
 epoch = 2.4
 
-[contracts.sponsored-amm-swap-pool]
-path = 'contracts/sponsored/sponsored-amm-swap-pool.clar'
-depends_on= ["amm-swap-pool"]
-clarity_version = 2
-epoch = 2.4
-
-[contracts.sponsored-swap-helper]
-path = 'contracts/sponsored/sponsored-swap-helper.clar'
-depends_on= ["swap-helper-v1-03", "swap-helper-bridged-v1-1", "swap-helper-bridged"]
-clarity_version = 2
-epoch = 2.4
-
-[contracts.sponsored-alex-launchpad-v1-7]
-path = 'contracts/sponsored/sponsored-alex-launchpad-v1-7.clar'
-depends_on = ["alex-launchpad-v1-7"]
-clarity_version = 2
-epoch = 2.4
-
 [contracts.alex-launchpad-v1-7]
 path = "contracts/pool/alex-launchpad-v1-7.clar"
 depends_on = ["trait-sip-010", "token-apower"]
@@ -1321,6 +1303,30 @@ depends_on = []
 [contracts.launchpad-buyback-helper-v1-7]
 path = "contracts/helpers/launchpad-buyback-helper-v1-7.clar"
 depends_on = ["alex-launchpad-v1-7"]
+
+[contracts.sponsored-amm-swap-pool-v1-1a]
+path = 'contracts/sponsored/sponsored-amm-swap-pool-v1-1a.clar'
+depends_on= ["amm-swap-pool-v1-1"]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.sponsored-amm-swap-pool-a]
+path = 'contracts/sponsored/sponsored-amm-swap-pool-a.clar'
+depends_on= ["amm-swap-pool"]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.sponsored-swap-helper-a]
+path = 'contracts/sponsored/sponsored-swap-helper-a.clar'
+depends_on= ["swap-helper-v1-03", "swap-helper-bridged-v1-1", "swap-helper-bridged"]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.sponsored-alex-launchpad-v1-7a]
+path = 'contracts/sponsored/sponsored-alex-launchpad-v1-7a.clar'
+depends_on = ["alex-launchpad-v1-7"]
+clarity_version = 2
+epoch = 2.4
 
 [contracts.token-wlong]
 path = "contracts/wrapped-token/token-wlong.clar"
