--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1337,3 +1337,16 @@ path = "contracts/wrapped-token/token-wlong.clar"
 depends_on = [ "trait-ownable", "trait-sip-010", "token-long"]
 clarity_version = 2
 epoch = 2.4
+
+[contracts.trait-rebase-sip-010]
+path = "contracts/traits/trait-rebase-sip-010.clar"
+
+[contracts.token-rebase-swap-pool]
+path = "contracts/pool-token/token-rebase-swap-pool.clar"
+clarity_version = 2
+epoch = 2.4
+
+[contracts.rebase-swap-pool]
+path = "contracts/pool/rebase-swap-pool.clar"
+clarity_version = 2
+epoch = 2.4
