--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -28,6 +28,10 @@ contract_id = "SP1AY6K3PQV5MRT6R4S671NWW2FRVPKM0BR162CT6.leo-token"
 contract_id = "SP1JFFSYTSH7VBM54K29ZFS9H4SVB67EA8VT2MYJ9.gus-token"
 [[project.requirements]]
 contract_id = "SP265WBWD4NH7TVPYQTVD23X3607NNK4484DTXQZ3.longcoin"
+[[project.requirements]]
+contract_id = "SP32AEEF6WW5Y0NMJ1S8SBSZDAY8R5J32NBZFPKKZ.wrapped-nothing-v8"
+[[project.requirements]]
+contract_id = "SP32AEEF6WW5Y0NMJ1S8SBSZDAY8R5J32NBZFPKKZ.micro-nthng"
 
 [repl]
 costs_version = 2
@@ -1338,6 +1342,13 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-long"]
 clarity_version = 2
 epoch = 2.4
 
+[contracts.token-wnothing]
+path = "contracts/token/token-wnothing.clar"
+depends_on = [ "trait-ownable", "trait-sip-010"]
+
+[contracts.token-wnthng]
+path = "contracts/wrapped-token/token-wnthng.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-wnothing"]
 [contracts.trait-rebase-sip-010]
 path = "contracts/traits/trait-rebase-sip-010.clar"
 
