feat: stx404-tokens

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1337,3 +1337,8 @@ path = "contracts/wrapped-token/token-wlong.clar"
 depends_on = [ "trait-ownable", "trait-sip-010", "token-long"]
 clarity_version = 2
 epoch = 2.4
+
+[contracts.token-stx404]
+path = "contracts/stx404-tokens/token-stx404.clar"
+clarity_version = 2
+epoch = 2.4
