feat: stx404 token

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1339,6 +1339,27 @@ clarity_version = 2
 epoch = 2.4
 
 [contracts.token-stx404]
-path = "contracts/stx404-tokens/token-stx404.clar"
+path = "contracts/stx404-token/token-stx404.clar"
 clarity_version = 2
 epoch = 2.4
+
+[contracts.trait-transfer-fixed]
+path = "contracts/traits/trait-transfer-fixed.clar"
+
+[contracts.trait-sft-transfer-fixed]
+path = "contracts/traits/trait-sft-transfer-fixed.clar"
+
+[contracts.amm-swap-pool-v1-2]
+path = "contracts/pool/amm-swap-pool-v1-2.clar"
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-amm-swap-pool-v1-2]
+path = "contracts/pool-token/token-amm-swap-pool-v1-2.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible", "alex-vault-v1-2"]
+
+[contracts.alex-vault-v1-2]
+path = "contracts/alex-vault-v1-2.clar"
+
+[contracts.trait-flash-loan-user-fixed]
+path = "contracts/traits/trait-flash-loan-user-fixed.clar"
