--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1380,3 +1380,7 @@ epoch = 2.4
 path = "contracts/pool/rebase-swap-pool.clar"
 clarity_version = 2
 epoch = 2.4
+
+[contracts.auto-alex-v3]
+path = "contracts/auto-token/auto-alex-v3.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "alex-reserve-pool" ]
