--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1318,14 +1318,32 @@ depends_on= ["amm-swap-pool"]
 clarity_version = 2
 epoch = 2.4
 
+[contracts.sponsored-amm-swap-pool]
+path = 'contracts/sponsored/sponsored-amm-swap-pool.clar'
+depends_on= ["amm-swap-pool"]
+clarity_version = 2
+epoch = 2.4
+
 [contracts.sponsored-swap-helper-a]
 path = 'contracts/sponsored/sponsored-swap-helper-a.clar'
 depends_on= ["swap-helper-v1-03", "swap-helper-bridged-v1-1", "swap-helper-bridged"]
 clarity_version = 2
 epoch = 2.4
 
+[contracts.sponsored-swap-helper]
+path = 'contracts/sponsored/sponsored-swap-helper.clar'
+depends_on= ["swap-helper-v1-03", "swap-helper-bridged-v1-1", "swap-helper-bridged"]
+clarity_version = 2
+epoch = 2.4
+
 [contracts.sponsored-alex-launchpad-v1-7a]
 path = 'contracts/sponsored/sponsored-alex-launchpad-v1-7a.clar'
+depends_on = ["alex-launchpad-v1-7"]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.sponsored-alex-launchpad-v1-7]
+path = 'contracts/sponsored/sponsored-alex-launchpad-v1-7.clar'
 depends_on = ["alex-launchpad-v1-7"]
 clarity_version = 2
 epoch = 2.4
