--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1417,6 +1417,11 @@ path = "contracts/bridge/stx20-bridge-registry.clar"
 clarity_version = 2
 epoch = 2.4
 
+[contracts.token-aewbtc]
+path = "contracts/token/token-aewbtc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
 [contracts.token-waewbtc]
 path = "contracts/wrapped-token/token-waewbtc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
