--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1404,3 +1404,8 @@ path = "contracts/bridge/stx20-bridge-endpoint.clar"
 clarity_version = 2
 epoch = 2.4
 
+[contracts.stx20-bridge-registry]
+path = "contracts/bridge/stx20-bridge-registry.clar"
+clarity_version = 2
+epoch = 2.4
+
