--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1405,6 +1405,16 @@ path = "contracts/pool/rebase-swap-pool.clar"
 clarity_version = 2
 epoch = 2.4
 
+[contracts.stx20-bridge-endpoint]
+path = "contracts/bridge/stx20-bridge-endpoint.clar"
+clarity_version = 2
+epoch = 2.4
+
+[contracts.stx20-bridge-registry]
+path = "contracts/bridge/stx20-bridge-registry.clar"
+clarity_version = 2
+epoch = 2.4
+
 [contracts.token-waewbtc]
 path = "contracts/wrapped-token/token-waewbtc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
