--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -36,6 +36,8 @@ contract_id = "SP3Y2ZSH8P7D50B0VBTSX11S7XSG24M1VB9YFQA4K.token-aewbtc"
 contract_id = "SP7V1SE7EA3ZG3QTWSBA2AAG8SRHEYJ06EBBD1J2.max-token"
 [[project.requirements]]
 contract_id = "SP1PW804599BZ46B4A0FYH86ED26XPJA7SFYNK1XS.play"
+[[project.requirements]]
+contract_id = "SP3Y2ZSH8P7D50B0VBTSX11S7XSG24M1VB9YFQA4K.token-aeusdc"
 
 [repl]
 costs_version = 2
@@ -1433,4 +1435,9 @@ depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
 
+[contracts.token-waeusdc]
+path = "contracts/wrapped-token/token-waeusdc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
 
