feat: add aeusdc

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1440,12 +1440,6 @@ depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
 
-[contracts.token-waeusdc]
-path = "contracts/wrapped-token/token-waeusdc.clar"
-depends_on = [ "trait-ownable", "trait-sip-010" ]
-clarity_version = 2
-epoch = 2.4
-
 [contracts.token-max]
 path = "contracts/token/token-max.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
@@ -1454,6 +1448,18 @@ epoch = 2.4
 
 [contracts.token-play]
 path = "contracts/token/token-play.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-waeusdc]
+path = "contracts/wrapped-token/token-waeusdc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-aeusdc]
+path = "contracts/token/token-aeusdc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
