--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -38,6 +38,8 @@ contract_id = "SP7V1SE7EA3ZG3QTWSBA2AAG8SRHEYJ06EBBD1J2.max-token"
 contract_id = "SP1PW804599BZ46B4A0FYH86ED26XPJA7SFYNK1XS.play"
 [[project.requirements]]
 contract_id = "SP3Y2ZSH8P7D50B0VBTSX11S7XSG24M1VB9YFQA4K.token-aeusdc"
+[[project.requirements]]
+contract_id = "SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz"
 
 [repl]
 costs_version = 2
@@ -1437,6 +1439,12 @@ epoch = 2.4
 
 [contracts.token-waeusdc]
 path = "contracts/wrapped-token/token-waeusdc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-wpepe]
+path = "contracts/wrapped-token/token-wpepe.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
