--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -40,6 +40,8 @@ contract_id = "SP1PW804599BZ46B4A0FYH86ED26XPJA7SFYNK1XS.play"
 contract_id = "SP3Y2ZSH8P7D50B0VBTSX11S7XSG24M1VB9YFQA4K.token-aeusdc"
 [[project.requirements]]
 contract_id = "SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz"
+[[project.requirements]]
+contract_id = "SP32AEEF6WW5Y0NMJ1S8SBSZDAY8R5J32NBZFPKKZ.nope"
 
 [repl]
 costs_version = 2
@@ -1468,6 +1470,12 @@ epoch = 2.4
 
 [contracts.token-aeusdc]
 path = "contracts/token/token-aeusdc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-wnope]
+path = "contracts/wrapped-token/token-wnope.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
