--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -42,6 +42,8 @@ contract_id = "SP3Y2ZSH8P7D50B0VBTSX11S7XSG24M1VB9YFQA4K.token-aeusdc"
 contract_id = "SP1Z92MPDQEWZXW36VX71Q25HKF5K2EPCJ304F275.tokensoft-token-v4k68639zxz"
 [[project.requirements]]
 contract_id = "SP32AEEF6WW5Y0NMJ1S8SBSZDAY8R5J32NBZFPKKZ.nope"
+[[project.requirements]]
+contract_id = "SP2Y8T3TR3FKH3Y2FPZVNQAEKNJXKWVS4RVQF48JE.stakemouse"
 
 [repl]
 costs_version = 2
@@ -1476,6 +1478,12 @@ epoch = 2.4
 
 [contracts.token-wnope]
 path = "contracts/wrapped-token/token-wnope.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+clarity_version = 2
+epoch = 2.4
+
+[contracts.token-wmick]
+path = "contracts/wrapped-token/token-wmick.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
