--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1417,6 +1417,17 @@ path = "contracts/pool/rebase-swap-pool.clar"
 clarity_version = 2
 epoch = 2.4
 
+[contracts.auto-alex-v3]
+path = "contracts/auto-token/auto-alex-v3.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.auto-alex-v3-registry]
+path = "contracts/auto-token/auto-alex-v3-registry.clar"
+depends_on = [ ]
+
+[contracts.auto-alex-v3-endpoint]
+path = "contracts/auto-token/auto-alex-v3-endpoint.clar"
+depends_on = [ "trait-sip-010", "age000-governance-token", "alex-reserve-pool" ]
 [contracts.stx20-bridge-endpoint]
 path = "contracts/bridge/stx20-bridge-endpoint.clar"
 clarity_version = 2
