--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1519,3 +1519,9 @@ epoch = 2.4
 path = "contracts/token/token-picsum-404.clar"
 clarity_version = 2
 epoch = 2.4
+
+[contracts.token-wpicsum]
+path = "contracts/wrapped-token/token-wpicsum.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-picsum-404"]
+clarity_version = 2
+epoch = 2.4
