--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1428,6 +1428,7 @@ depends_on = [ ]
 [contracts.auto-alex-v3-endpoint]
 path = "contracts/auto-token/auto-alex-v3-endpoint.clar"
 depends_on = [ "trait-sip-010", "age000-governance-token", "alex-reserve-pool" ]
+
 [contracts.stx20-bridge-endpoint]
 path = "contracts/bridge/stx20-bridge-endpoint.clar"
 clarity_version = 2
@@ -1438,11 +1439,17 @@ path = "contracts/bridge/stx20-bridge-registry.clar"
 clarity_version = 2
 epoch = 2.4
 
+[contracts.stx20-stxs]
+path = "contracts/token/stx20-stxs.clar"
+clarity_version = 2
+epoch = 2.4
+
 [contracts.token-aewbtc]
 path = "contracts/token/token-aewbtc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
+
 [contracts.token-waewbtc]
 path = "contracts/wrapped-token/token-waewbtc.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
