--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1561,3 +1561,9 @@ path = "contracts/wrapped-token/token-wwif.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
+
+[contracts.amm-swap-pool-helper]
+path = "contracts/helpers/amm-swap-pool-helper.clar"
+depends_on = [ ]
+clarity_version = 2
+epoch = 2.4
