--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1562,8 +1562,8 @@ depends_on = [ "trait-ownable", "trait-sip-010" ]
 clarity_version = 2
 epoch = 2.4
 
-[contracts.amm-swap-pool-helper]
-path = "contracts/helpers/amm-swap-pool-helper.clar"
+[contracts.amm-swap-pool-helper-v1-1]
+path = "contracts/helpers/amm-swap-pool-helper-v1-1.clar"
 depends_on = [ ]
 clarity_version = 2
 epoch = 2.4
